Fixed flickering on hovering disabled details section

--- a/src/panel/webview/styles.css
+++ b/src/panel/webview/styles.css
@@ -331,10 +331,6 @@ select:focus {
     content: '📄';
 }
 
-.variable-summary.not-clickable:active {
-    pointer-events: none;
-}
-
 .variable-summary.not-clickable::before {
     opacity: 0.5;
 }
